--- a/public/css/page2.css
+++ b/public/css/page2.css
@@ -1,7 +1,7 @@
 .wrapper{
 	width: 100%;
 	height: 90vh;
-	background-color: white;
+/*	background-color: white;*/
 	margin-top: 3.5%;
 	margin-bottom: 2.4%;
 	padding: 0;
@@ -9,6 +9,7 @@
 	background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    font-weight: bold;
 }
 
 
@@ -24,20 +25,39 @@
 	padding-top: 1%;
 	padding-left: 12%;
 }
+
+.button-upload {
+	text-align: center; 
+	min-width: 325px;
+    display: inline-block;
+    padding: 1%;
+    background: white;
+    cursor: pointer;
+   	border-radius: 25px;
+    border: 2px solid #149ccc;
+}
+
+input[type="file"]{
+	display: none;
+}
+
 input{
+	min-width: 325px;
 	border-radius: 25px;
     border: 2px solid #149ccc;
-    padding: 20px; 
-    width: 90%;
+    padding: 5%;
+    /*width: 90%;*/
     height: 15px;  
 }
+
 #button-login{
 	margin-top: 8%;
 	margin-bottom: 0;
 	display: block;
 	border-radius: 25px;
 	height: 50px;
-	width: 90%;
+	/*width: 90%;*/
+	min-width: 325px;
 	background-color: #149ccc;
 	color: white;
 	font-size: 20px;
