--- a/public/css/page2.css
+++ b/public/css/page2.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 90vh;
 /*	background-color: white;*/
-	margin-top: 3.5%;
+	/*margin-top: 3.5%;*/
 	margin-bottom: 2.4%;
 	padding: 0;
 	background-image: url("../css/bg.jpg");
@@ -11,7 +11,6 @@
     background-repeat: no-repeat;
     font-weight: bold;
 }
-
 
 .container-box{
 	padding-top: 9%;
@@ -37,17 +36,27 @@
     border: 2px solid #149ccc;
 }
 
+label{  
+	margin-top: 2%;
+}
+
 input[type="file"]{
 	display: none;
 }
 
-input{
+input, .Gender select{
 	min-width: 325px;
 	border-radius: 25px;
     border: 2px solid #149ccc;
-    padding: 5%;
-    /*width: 90%;*/
-    height: 15px;  
+    padding: 1.5%;
+    width: 90%;
+}
+
+.DOB select{
+	padding: 1.5%;
+	min-width: 32%;
+	border-radius: 25px;
+    border: 2px solid #149ccc;
 }
 
 #button-login{
@@ -72,3 +81,4 @@ input{
 	box-shadow: 2px 2px 2px 2px rgba(0,0,0,.2);
 	transition-duration: .8s;
 }
+
