--- a/public/css/page2.css
+++ b/public/css/page2.css
@@ -44,7 +44,7 @@ input[type="file"]{
 	display: none;
 }
 
-input, .Gender select{
+input, .Gender select, .consult{
 	min-width: 325px;
 	border-radius: 25px;
     border: 2px solid #149ccc;
@@ -80,5 +80,9 @@ input, .Gender select{
 	color: white;
 	box-shadow: 2px 2px 2px 2px rgba(0,0,0,.2);
 	transition-duration: .8s;
+}
+
+.Top{
+	margin-bottom: 10%;
 }
 
