beberapa udah rapih

--- a/public/css/page2.css
+++ b/public/css/page2.css
@@ -1,6 +1,6 @@
 .wrapper{
 	width: 100%;
-	height: 90vh;
+	height: relative;
 /*	background-color: white;*/
 	/*margin-top: 3.5%;*/
 	margin-bottom: 2.4%;
